--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "mongodb": "^6.7.0",
     "nuxt": "^3.11.1",
     "vue": "^3.4.21",
-    "vue-router": "^4.3.2"
+    "vue-router": "^4.3.2",
+    "vue-toast-notification": "^3.1.2"
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^6.11.4"
